<resources>
    <string name="app_name">EDC Sekolah</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TESTING -->
    <string name="go_to_menu">Go To Menu</string>
    <string name="menu_fragment">Menu Fragment</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="device_address">Device Address</string>
    <string name="device_name">Device Name</string>
    <string name="test_print">TEST PRINT</string>
    <string name="test_small_print">TEST SMALL PRINT</string>
    <string name="test_printooth">TEST PRINTOOTH</string>
    <string name="icon">icon</string>
    <string name="menu_title">SALE</string>
    <string name="menu_desc">Sale is .....</string>
    <string name="nama_sekolah">Nama Sekolah</string>
    <string name="nama_jurusan">Nama Jurusan</string>
    <string name="save">SAVE</string>
    <string name="cetak">CETAK</string>
    <string name="app_logo">App Logo</string>
    <string name="smk_text">Sekolah Menengah Kejuruan</string>
    <string name="major_text">Bisnis dan Manajemen</string>
    <string name="alamat_sekolah">Alamat Sekolah</string>
    <string name="menu">MENU</string>
    <string name="school_address_text">JL. Raya Cikarang Cibarusah No.27, Cikarang, Cibarusah, Bekasi, Jawa Barat 17530</string>
    <string name="school_name_text">SMKN 9 SEMARANG</string>

    <!--  NFC  -->
    <string name="nfc_is_ready">NFC is ready</string>
    <string name="nfc_payload">NFC PAYLOAD</string>
    <string name="nfc_not_available_on_this_device">NFC not available on this device</string>
    <string name="nfc_is_disabled_please_enable_nfc_in_settings">NFC is disabled. Please enable NFC in settings.</string>
    <string name="nfc_permission_not_granted_grant_permission_in_settings">NFC permission not granted. Grant permission in settings.</string>
    <string name="nfc_is_enabled_and_permission_is_granted">NFC is enabled and permission is granted.</string>
    <string name="nfc_status">NFC STATUS</string>
    <string name="pin_1">1</string>
    <string name="pin_2">2</string>
    <string name="pin_3">3</string>
    <string name="pin_4">4</string>
    <string name="pin_5">5</string>
    <string name="pin_6">6</string>
    <string name="pin_7">7</string>
    <string name="pin_8">8</string>
    <string name="pin_9">9</string>
    <string name="pin_000">000</string>
    <string name="pin_0">0</string>
    <string name="stop">stop</string>
    <string name="clear">clear</string>
    <string name="ok">ok</string>
    <string name="tut_wuri_logo">Tut Wuri Logo</string>
    <string name="enter_pin">ENTER PIN</string>
    <string name="please_enter_your_pin">PLEASE ENTER YOUR PIN</string>
    <string name="interpunct">·</string>
    <string name="enter_amount">ENTER AMOUNT</string>
    <string name="hint_amount">50.000</string>
    <string name="masukkan_total_harga_yang_harus_dibayar">Masukkan total harga yang harus dibayar</string>
    <string name="nfc_total_amount">Tempelkan kartu NFC Anda dengan nominal Rp. 10.000,-</string>
    <string name="settlements">SETTLEMENTS</string>
    <string name="total">TOTAL</string>
    <string name="print_loop">PRINT LOOP</string>
    <string name="print_text_alignment">PRINT TEXT ALIGNMENT</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="reprint">REPRINT</string>
    <string name="card_transaction">CARD TRANSACTION</string>
    <string name="date">2023-01-01 00:00:00</string>
    <string name="amount_text">Rp 5.000.000</string>
    <string name="enter_trace_id">ENTER TRACE ID</string>
    <string name="enter_trace_id_desc">Masukkan Trace ID yang terdapat pada struck pembayaran</string>
    <string name="edc_type">EDC NO. 493.24 TYPE.IB1</string>
    <string name="edc_no">23112022</string>
    <string name="terminal_id">TERMINAL ID : 000000</string>
    <string name="merchant_id">MERCHANT ID : 000000000</string>
    <string name="date_text">DATE : 2023-08-20</string>
    <string name="time_text">TIME : 22:47</string>
    <string name="ref_text">REF NO : 000000</string>
    <string name="aprv_text">APRV : 00000</string>
    <string name="trace_id_text">TRACE ID : 1</string>
    <string name="batch_text">BATCH : 000000</string>
    <string name="status_text">STATUS : PAID</string>
    <string name="card_no_text">CARD NO : 000000</string>
    <string name="void_sale">VOID SALE</string>
    <string name="amount">AMOUNT</string>
    <string name="minus_amount_text">-Rp. 5.000.000</string>
    <string name="agreement">CARDHOLDER ACKNOWLEDGE RECEIPT OF GOODS AND/OR SERVICES</string>
    <string name="customer_copy">** CUSTOMER COPY **</string>
    <string name="void_text">VOID</string>
    <string name="void_successful">VOID SUCCESSFUL</string>
    <string name="logo_sekolah">LOGO SEKOLAH</string>
    <string name="cash">CASH</string>
    <string name="cash_desc">Pembayaran tunai</string>
    <string name="cashless">CASHLESS</string>
    <string name="cashless_desc">Pembayaran non tunai</string>
    <string name="current_bluetooth_device">CURRENT BLUETOOTH DEVICE</string>
    <string name="text_current_bluetooth_device">EDC (11:12:13:14:15)</string>

    <string name="text_no_bluetooth_connected">NO BLUETOOTH CONNECTED</string>
    <string name="text_bluetooth_connect">CONNECT</string>
    <string name="text_bluetooth_disconnect">DISCONNECT</string>
    <string name="silahkan_tempel_kartu_nfc_anda_pada_mesin">Silahkan tempel kartu NFC anda pada mesin</string>
    <string name="print_logo">Print Logo</string>
    <string name="textview">TextView</string>
    <string name="qris">QRIS</string>
    <string name="next">next</string>

    <string name="please_connect_to_bluetooth_printer">Tolong hubungkan printer pada setting aplikasi.</string>
    <string name="magnetic_card">MAGNETIC CARD</string>
    <string name="pembayaran_melalui_magnetic_card">Pembayaran melalui magnetic card</string>
    <string name="ic_card">IC CARD</string>
    <string name="pembayaran_melalui_ic_card">Pembayaran melalui IC Card</string>
    <string name="insert_card">INSERT CARD</string>
    <string name="masukkan_kartu_ic_card_anda_ke_mesin">Masukkan kartu IC Card anda ke mesin</string>
    <string name="swipe_card">SWIPE CARD</string>
    <string name="gesekkan_kartu_anda">Gesekkan kartu Anda</string>
    <string name="perangkat_tidak_didukung">Mohon maaf, sepertinya perangkat Anda tidak mendukung fitur ini.</string>

</resources>