<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AppFragment"
    android:layout_margin="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_school_logo"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/tutwuri_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_smk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smk_text"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_school_logo" />

        <TextView
            android:id="@+id/tv_major_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/major_text"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_smk" />

        <TextView
            android:id="@+id/tv_school_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school_name_text"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/tv_school_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_school_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school_address_text"
            android:textAlignment="center"
            android:textSize="14sp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/btn_go_to_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/btn_go_to_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>