<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".menu.settings.bluetooth.BluetoothDevicesFragment">

    <LinearLayout
        android:id="@+id/ll_current_bluetooth_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/current_bluetooth_device"/>

        <TextView
            android:id="@+id/tv_current_bluetooth_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_no_bluetooth_connected"/>

        <Button
            android:id="@+id/btn_bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_bluetooth_connect"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_paired_bluetooth"
        app:layout_constraintTop_toBottomOf="@id/ll_current_bluetooth_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>